--- a/densityConfig.conf
+++ b/densityConfig.conf
@@ -7,7 +7,7 @@ Program :
 
 OutputFiles : 
 {
-  TimeSeries = "";
+  TimeSeries = "output/TimeSeries.dat";
   FullFunctions = "";
 };
 
@@ -16,7 +16,7 @@ InputFiles :
   KCurveParticleA = "input/KCurve.dat";
   KCurveParticleB = "input/KCurve.dat";
   GLWeightsParticleA = "input/GLweights.dat";
-  GLWeightsParticleB = "input/GLWeights.dat";
+  GLWeightsParticleB = "input/GLweights.dat";
   EigendataParticleA = "input/EigenSingle.dat";
   EigendataParticleB = "input/EigenSingle.dat";
   EigendataTwoParticles = "input/EigenTwoPart.dat";
@@ -27,21 +27,21 @@ DomainSpecifics :
   Time :
   {
 	Start = 0.0;
-	Stop = 0.0; 
+	Stop = 5.0; 
 	Precision = 100;
   }
 
   ParticleA :
   {
-  	Start = 0.0;
-	Stop = 0.0;
+  	Start = 2.3;
+	Stop = 7.8;
 	Precision = 100;
   }		
 
   ParticleB :
   {
-	Start = 0.0;
-	Stop = 0.0;
+	Start = 2.3;
+	Stop = 7.8;
 	Precision = 100;
   }		
 };
