--- a/densityConfig.conf
+++ b/densityConfig.conf
@@ -7,19 +7,23 @@ Program :
 
 OutputFiles : 
 {
-  TimeSeries = "output/TimeSeries.dat";
+  TimeSeries = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/multiOut/TimeSeries@GV@.dat";
   FullFunctions = "";
+  SingleA = "";
+  SingleB = "";
+  SingleABasis = 96;
+  SingleBBasis = 96;
 };
 
 InputFiles :
 { 
-  KCurveParticleA = "input/KCurve.dat";
-  KCurveParticleB = "input/KCurve.dat";
-  GLWeightsParticleA = "input/GLweights.dat";
-  GLWeightsParticleB = "input/GLweights.dat";
-  EigendataParticleA = "input/EigenSingle.dat";
-  EigendataParticleB = "input/EigenSingle.dat";
-  EigendataTwoParticles = "input/EigenTwoPart.dat";
+  KCurveParticleA = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/KCurve.dat";
+  KCurveParticleB = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/KCurve.dat";
+  GLWeightsParticleA = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/GLweights.dat";
+  GLWeightsParticleB = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/GLweights.dat";
+  EigendataParticleA = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/EigenSingle.dat";
+  EigendataParticleB = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/EigenSingle.dat";
+  EigendataTwoParticles = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/EigenTwo_@GV@.dat";
 }
 
 DomainSpecifics : 
@@ -27,22 +31,24 @@ DomainSpecifics :
   Time :
   {
 	Start = 0.0;
-	Stop = 5.0; 
+	Stop = 1.0E6; 
 	Precision = 100;
   }
 
   ParticleA :
   {
-  	Start = 2.3;
-	Stop = 7.8;
-	Precision = 100;
+  	Start = -3.0;
+	#Stop = 7.8;
+	Stop = 15.0;
+	Precision = 200;
   }		
 
   ParticleB :
   {
-	Start = 2.3;
-	Stop = 7.8;
-	Precision = 100;
+  	Start = -3.0;
+	Stop = 15.0;
+	#Stop = 7.8;
+	Precision = 200;
   }		
 };
 
