--- a/confTest.conf
+++ b/confTest.conf
@@ -7,10 +7,10 @@ Program :
 
 OutputFiles : 
 {
-  TimeSeries = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/multiOut/TimeSeries@GV@.dat";
+  TimeSeries = "output/TS.dat";
   FullFunctions = "";
-  SingleA = "";
-  SingleB = "";
+  SingleA = "output/SA.dat";
+  SingleB = "output/SB.dat";
   SingleABasis = 96;
   SingleBBasis = 96;
 };
@@ -23,7 +23,7 @@ InputFiles :
   GLWeightsParticleB = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/GLweights.dat";
   EigendataParticleA = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/EigenSingle.dat";
   EigendataParticleB = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/EigenSingle.dat";
-  EigendataTwoParticles = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/EigenTwo_@GV@.dat";
+  EigendataTwoParticles = "/net/home/riklund/Dropbox/MastersProject_Drafts/DensityCalculator/input/EigenTwo_0.1.dat";
 }
 
 DomainSpecifics : 
