--- a/fluxConfig.conf
+++ b/fluxConfig.conf
@@ -9,8 +9,8 @@ Output :
 {
   SingleA = 96;
   SingleB = 96;
-  DensityFile = "output/@OUTDIR@/densities/density_@GV@.dat";
-  FluxFile = "output/@OUTDIR@/gradients/gradient_@GV@.dat"
+  DensityFile = "/net/data1/riklund/flux_output/@OUTDIR@/densities/density_@GV@.dat";
+  FluxFile = "/net/data1/riklund/flux_output/@OUTDIR@/gradients/gradient_@GV@.dat"
 };
 
 InputFiles :
@@ -26,18 +26,19 @@ InputFiles :
 
 DomainSpecifics : 
 {
+  LegendreRule = False;
   ParticleANormInt :
   {
   	Start = -3.0;
-	Stop = 25.0;
-	Precision = 500;
+	Stop = 45.0;
+	Precision = 2000;
   }		
 
   ParticleBNormInt :
   {
   	Start = -3.0;
-	Stop = 25.0;
-	Precision = 500;
+	Stop = 45.0;
+	Precision = 2000;
   }		
 };
 
