--- a/makefile.in
+++ b/makefile.in
@@ -1,6 +1,6 @@
 CC:= g++
 
-CCFLAGS:=  -pthread -Wall -fPIC -pedantic -Wno-long-long -g -O3 -fopenmp
+CCFLAGS:=  -pthread -Wall -fPIC -pedantic -Wno-long-long -g -fopenmp
 
 CCOFLAGS:= -fexpensive-optimizations
 
@@ -24,9 +24,8 @@ SRC:= $(wildcard src/*.cc)
 OBJ:= $(SRC:src/%.cc=bin/%.o) 
 
 
-MAINS := Flux
+MAINS := Flux Arc
 MAINSOBJ:= $(MAINS:%=bin/%.o)
-MAINSNAME := Flux
 
 
 
@@ -40,7 +39,7 @@ bin:
 
 $(MAINS): %: $(filter-out $(MAINSOBJ), $(OBJ)) bin/%.o
 	@echo Compiling $@...
-	@$(CC) $(CCFLAGS) $(INCLUDE) $^ $(LIBS)  -o $(MAINSNAME)
+	@$(CC) $(CCFLAGS) $(INCLUDE) $^ $(LIBS)  -o $@
 
 $(OBJ): bin/%.o: src/%.cc include/%.hh $(GLOBALDEPEND)
 	@echo Compiling $@...
