Updating README and adding some scripts.

--- a/fluxConfig.conf
+++ b/fluxConfig.conf
@@ -9,8 +9,8 @@ Output :
 {
   SingleA = 96;
   SingleB = 96;
-  DensityFile = "/net/data1/riklund/flux_output/@OUTDIR@/densities/density_@GV@.dat";
-  FluxFile = "/net/data1/riklund/flux_output/@OUTDIR@/gradients/gradient_@GV@.dat"
+  DensityFile = "@OUTDIR@/densities/density_@GV@.dat";
+  FluxFile = "@OUTDIR@/gradients/gradient_@GV@.dat"
 };
 
 InputFiles :
@@ -30,15 +30,15 @@ DomainSpecifics :
   ParticleANormInt :
   {
   	Start = -3.0;
-	Stop = 45.0;
-	Precision = 2000;
+	Stop = @STOP@;
+	Precision = 1000;
   }		
 
   ParticleBNormInt :
   {
   	Start = -3.0;
-	Stop = 45.0;
-	Precision = 2000;
+	Stop = @STOP@;
+	Precision = 1000;
   }		
 };
 
